<resources>
    <string name="app_name">PlayerAndRecorder</string>
    <string name="audio_recorder">Recorder</string>
    <string name="audio_player">Player</string>
    <string name="string_progress">Progress</string>


    <string name="records">Records</string>
    <string name="settings">Settings</string>
    <string name="rate_app">Rate app</string>
    <string name="store_records_public">Store records in public dir</string>
    <string name="record_in_stereo">Record in Stereo</string>
    <string name="keep_screen_on">Keep screen ON when recording</string>
    <string name="total_duration">Total recorded duration: %s</string>
    <string name="total_record_count">Total records count: %d</string>
    <string name="available_space">Available space: %s</string>
    <string name="delete_all">Delete all records</string>
    <string name="warning">Warning!</string>
    <string name="delete_record">Delete this record?</string>
    <string name="delete_all_records">Delete all records?</string>
    <string name="all_records_deleted">All records deleted successfully</string>
    <string name="failed_to_delete_all_records">Failed to deleted all records</string>
    <string name="please_select_record_to_share">Please select or record an audio file to share</string>
    <string name="record_name">Rename File</string>
    <string name="recording">Recording: %s</string>
    <string name="recording_is_on">Recording is ON</string>
    <string name="recording_progress">Recording&#8230;</string>
    <string name="recording_paused">Paused</string>
    <string name="playback">Playback: %s</string>
    <string name="zero_time">00:00</string>
    <string name="no_records">Records is empty.</string>
    <string name="no_bookmarks">Bookmarks is empty.</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="share_record">Share record: %s</string>
    <string name="import_progress">Audio file import&#8230;</string>
    <string name="record_processing">Waveform drawing calculations&#8230;</string>
    <string name="request">Request or feedback</string>
    <string name="email_clients_not_found">Not found any Email client</string>
    <string name="send_email">Send by email&#8230;</string>
    <string name="open_record_with">Open %s with</string>
    <string name="delete">Delete</string>
    <string name="info">Information</string>
    <string name="rename">Rename</string>
    <string name="open_with">Open with&#823;</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="ask_to_rename">Show renaming dialog after stop recording</string>
    <string name="record_deleted_successfully">Record deleted successfully</string>
    <string name="by_date">By date</string>
    <string name="by_name">By name</string>
    <string name="by_duration">By duration</string>
    <string name="need_write_permission">The app requires permission to access to the public storage. If not allowed, records will be stored in the app’s private directory</string>
    <string name="rec_name">Name:</string>
    <string name="rec_format">Format:</string>
    <string name="rec_duration">Duration:</string>
    <string name="rec_size">Size:</string>
    <string name="rec_location">File location:</string>
    <string name="naming">Naming:</string>
    <string name="private_dir_warning">Records will be stored in the app\'s private directory which is not visible for other apps</string>
    <string name="public_dir_warning">Records will be stored in the common directory on your device which is visible for other apps</string>

    <string name="app_settings">App settings:</string>
    <string name="recording_settings">Recording settings:</string>
    <string name="other_settings">Other:</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>

    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_no">No</string>
    <string name="btn_play">Play</string>
    <string name="btn_deny">Deny</string>
    <string name="btn_allow">Allow</string>

    <string name="error_unknown">Unexpected error</string>
    <string name="error_cant_create_file">Can\'t create file</string>
    <string name="error_invalid_output_file">Invalid output file</string>
    <string name="error_file_exists">File with this name is already exists!</string>
    <string name="error_failed_to_rename">Failed to rename record!</string>
    <string name="error_failed_to_init_recorder">Failed to init Recorder</string>
    <string name="error_failed_to_init_player">Failed to init Player</string>
    <string name="error_player_data_source">Player can\'t read file</string>
    <string name="error_unable_to_read_sound_file">Unable to read sound file</string>
    <string name="error_permission_denied">Permission denied</string>
    <string name="error_process_waveform">Can\'t draw waveform</string>

    <!-- Shown in the 'About' window of the app. -->
    <string name="about_body"><![CDATA[
    	<b>Audio Recorder 2019</b><br>
		Version %s
	]]></string>
    <!--<a href="http://#/">Application site</a>-->

    <string-array name="theme_colors">
        <item>Theme Not selected</item>
        <item>Theme Black</item>
        <item>Theme Teal</item>
        <item>Theme Blue</item>
        <item>Theme Deep Purple</item>
        <item>Theme Pink</item>
        <item>Theme Deep Orange</item>
        <item>Theme Red</item>
        <item>Theme Brown</item>
        <item>Theme Blue Gray</item>
    </string-array>

    <string-array name="formats">
        <item>Format: M4a</item>
        <item>Format: Wav</item>
    </string-array>

    <string-array name="sample_rates">
        <item>Sample rate: 8000</item>
        <item>Sample rate: 16000</item>
        <item>Sample rate: 32000</item>
        <item>Sample rate: 44100</item>
        <item>Sample rate: 48000</item>
    </string-array>

    <string-array name="bit_rates">
        <item>Bitrate: 24kbps</item>
        <item>Bitrate: 48kbps</item>
        <item>Bitrate: 96kbps</item>
        <item>Bitrate: 128kbps</item>
        <item>Bitrate: 192kbps</item>
    </string-array>

</resources>
