<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/pnl_import_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_tiny"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="invisible"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginLeft="@dimen/spacing_small"
            android:text="@string/string_progress"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pnl_record_processing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_tiny"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="invisible"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginLeft="@dimen/spacing_small"
            android:text="@string/record_processing"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.example.playerandrecorder.Widgets.WaveformView
                android:id="@+id/record"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/waveform_height"
                android:layout_marginBottom="48dp" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_play"
                android:layout_width="@dimen/bottom_pnl_small_btn_size"
                android:layout_height="@dimen/bottom_pnl_small_btn_size"
                android:layout_gravity="bottom|center"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/ic_play"
                android:visibility="invisible" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_stop"
                android:layout_width="@dimen/bottom_pnl_small_btn_size"
                android:layout_height="@dimen/bottom_pnl_small_btn_size"
                android:layout_gravity="bottom|center"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/ic_stop"
                android:visibility="gone" />
        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_zero_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginBottom="@dimen/spacing_small"
            android:text="@string/zero_time"
            android:textColor="@color/text_primary_light"
            android:textSize="@dimen/text_medium"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/text_primary_light"
                android:textSize="54sp"
                android:textStyle="bold"
                tools:text="00:00" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginStart="@dimen/spacing_huge"
                android:layout_marginEnd="@dimen/spacing_huge"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:drawableEnd="@drawable/ic_pencil_small"
                android:drawableRight="@drawable/ic_pencil_small"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/text_primary_light"
                android:textSize="@dimen/text_large"
                android:visibility="invisible"
                tools:text="Rec-2019.12.30 12:12:23"
                tools:visibility="visible" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:layout_marginBottom="@dimen/spacing_small"
            android:text="@string/zero_time"
            android:textColor="@color/text_primary_light"
            android:textSize="@dimen/text_medium"
            android:visibility="invisible" />

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/play_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="1000"
        android:progress="20" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_record_delete"
                android:layout_width="@dimen/bottom_pnl_small_btn_size"
                android:layout_height="@dimen/bottom_pnl_small_btn_size"
                android:layout_gravity="center"
                android:contentDescription="@string/delete"
                android:padding="@dimen/spacing_normal"
                android:scaleType="center"
                android:src="@drawable/ic_delete_forever_36"
                android:visibility="invisible" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_record"
                android:layout_width="@dimen/bottom_pnl_btn_size"
                android:layout_height="@dimen/bottom_pnl_btn_size"
                android:layout_gravity="center"
                android:layout_margin="@dimen/spacing_small"
                android:adjustViewBounds="true"
                android:contentDescription="@string/recording"
                android:scaleType="center"
                android:src="@drawable/ic_record" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_record_stop"
                android:layout_width="@dimen/bottom_pnl_small_btn_size"
                android:layout_height="@dimen/bottom_pnl_small_btn_size"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:padding="@dimen/spacing_normal"
                android:scaleType="center"
                android:src="@drawable/ic_stop"
                android:visibility="invisible" />

        </LinearLayout>



    </FrameLayout>

</LinearLayout>
